@@ -1,5 +1,9 @@
 2009-10-23  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* music/port.hh, port.cc (EventOutputPort::EventOutputPort,
+	EventInputPort::EventInputPort): Moved from header file to
+	port.cc.
+
 	* temporal.cc (TemporalNegotiator::distributeNegotiationData): Use
 	type ClockState for accLatency.
 
